refactor: convert-file.dialog, create-file.dialog, permissions.dialog

--- a/src/lib/dialogs/convert/convert-file.dialog.scss
+++ b/src/lib/dialogs/convert/convert-file.dialog.scss
@@ -1,15 +1,2 @@
-.adf-convert-file-dialog-button {
-  text-transform: uppercase;
-}
-
-.adf-dialog-content:has(.adf-dialog-content-progress-text) {
-  padding: 0;
-
-  .adf-dialog-content-progress-text {
-      margin-top: 4px;
-
-      &-percentage {
-          font-weight: 900;
-      }
-  }
-} 
+@import '../../styles/common.scss';
+@import '../../styles/dialog.scss';
