--- a/src/lib/dialogs/create/create-file.dialog.scss
+++ b/src/lib/dialogs/create/create-file.dialog.scss
@@ -1,91 +1,4 @@
 /* stylelint-disable selector-class-pattern */
 
-onlyoffice-alfresco-extension-create-file-dialog {
-  overflow: visible;
-  display: block;
-  margin-left: -24px;
-  margin-right: -24px;
-
-  .onlyoffice-alfresco-extension-create-file {
-    &-title {
-      margin-left: 24px;
-      margin-right: 24px;
-      font-size: 20px;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.6;
-      letter-spacing: -0.5px;
-      color: var(--theme-text-bold-color);
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    &-field {
-      width: 100%;
-
-      &:first-of-type {
-        margin-bottom: 9.5px;
-      }
-
-      &:nth-of-type(2) {
-        margin-bottom: 6.5px;
-      }
-    }
-
-    &-content {
-      margin: 0 2px;
-      overflow: hidden;
-
-      .onlyoffice-alfresco-extension-create-file-field {
-        .mdc-floating-label {
-          -webkit-font-smoothing: subpixel-antialiased;
-        }
-
-        &.mat-form-field-hide-placeholder {
-          .mdc-floating-label {
-            padding-top: 11px;
-          }
-        }
-
-        &.onlyoffice-alfresco-extension-create-file-field-description {
-          &.mat-form-field-hide-placeholder {
-            .mdc-floating-label {
-              padding-top: 19px;
-            }
-          }
-        }
-
-        .mat-mdc-form-field-infix {
-          padding-bottom: 3.5px;
-        }
-
-        .mat-mdc-form-field-error-wrapper {
-          margin-left: -2px;
-          font-size: 10.5px;
-          -webkit-font-smoothing: subpixel-antialiased;
-        }
-      }
-    }
-
-    &-footer {
-      padding: 8px 22px;
-      display: flex;
-      justify-content: flex-end;
-      color: var(--theme-secondary-text-color);
-
-      button {
-        text-transform: uppercase;
-        font-weight: normal;
-      }
-
-      &-create-button[disabled] {
-        opacity: 0.6;
-      }
-
-      &-create-button:enabled {
-        color: var(--theme-accent-color);
-      }
-    }
-  }
-}
+@import '../../styles/common.scss';
+@import '../../styles/dialog.scss';
