--- a/src/lib/dialogs/permissions/permissions.dialog.scss
+++ b/src/lib/dialogs/permissions/permissions.dialog.scss
@@ -1,34 +1,13 @@
 /* stylelint-disable selector-class-pattern */
 
-onlyoffice-alfresco-extension-permissions-dialog {
-  overflow: visible;
-  display: block;
-  margin-left: -24px;
-  margin-right: -24px;
+@import '../../styles/common.scss';
+@import '../../styles/dialog.scss';
 
+onlyoffice-alfresco-extension-permissions-dialog {
   .adf-permission-card {
     padding: 0;
     border: none;
     box-shadow: none;
-  }
-
-  .onlyoffice-alfresco-extension-permissions {
-    &-content {
-      padding: 0 !important;
-      overflow: unset !important;
-    }
-
-    &-footer {
-      padding: 8px 22px;
-      display: flex;
-      justify-content: flex-end;
-      color: var(--theme-secondary-text-color);
-
-      button {
-        text-transform: uppercase;
-        font-weight: normal;
-      }
-    }
   }
 }
 
