fix: added delete DocsAPI object form window on destroy component

--- a/src/lib/components/editor/editor.component.html
+++ b/src/lib/components/editor/editor.component.html
@@ -16,6 +16,6 @@
   [id]="editorId" 
   [documentServerUrl]="documentServerUrl"
   [config]="config"
-  [shardkey]="shardKey"
+  [shardkey]="true"
   [onLoadComponentError]="onLoadComponentError"
 /> 
