--- a/src/lib/components/viewer/viewer.component.html
+++ b/src/lib/components/viewer/viewer.component.html
@@ -8,6 +8,6 @@
   [id]="editorId" 
   [documentServerUrl]="documentServerUrl"
   [config]="config"
-  [shardkey]="shardKey"
+  [shardkey]="true"
   [onLoadComponentError]="onLoadComponentError"
 /> 
