fix: build warning (@import is deprecated in scss)

--- a/src/lib/dialogs/convert/convert-file.dialog.scss
+++ b/src/lib/dialogs/convert/convert-file.dialog.scss
@@ -1,2 +1,2 @@
-@import '../../styles/common.scss';
-@import '../../styles/dialog.scss';
+@use '../../styles/common' as *;
+@use '../../styles/dialog' as *;
