--- a/src/lib/dialogs/download-as/download-as.dialog.scss
+++ b/src/lib/dialogs/download-as/download-as.dialog.scss
@@ -1,7 +1,5 @@
-/* stylelint-disable selector-class-pattern */
-
-@import '../../styles/common.scss';
-@import '../../styles/dialog.scss';
+@use '../../styles/common' as *;
+@use '../../styles/dialog' as *;
 
 .onlyoffice-alfresco-extension-dialog {
   .onlyoffice-alfresco-extension-dialog {
