--- a/src/lib/dialogs/permissions/permissions.dialog.scss
+++ b/src/lib/dialogs/permissions/permissions.dialog.scss
@@ -1,7 +1,5 @@
-/* stylelint-disable selector-class-pattern */
-
-@import '../../styles/common.scss';
-@import '../../styles/dialog.scss';
+@use '../../styles/common' as *;
+@use '../../styles/dialog' as *;
 
 onlyoffice-alfresco-extension-permissions-dialog {
   .adf-permission-card {
